--- a/app/templates/admin/update_quiz.html
+++ b/app/templates/admin/update_quiz.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="mb-4">Add New Quiz</h1>
+<h1 class="mb-4">Update New Quiz</h1>
 <form method="POST" action="">
     {{ form.hidden_tag() }}
     <div class="form-group mb-3">
@@ -15,6 +15,10 @@
     <div class="form-group mb-4">
         <label for="category_id">{{ form.category_id.label }}</label>
         {{ form.category_id(class="form-select") }}
+    </div>
+    <div class="form-group mb-4">
+        <label for="status">{{ form.total_questions.label }}</label>
+        {{ form.total_questions(class="form-control", size=32) }}
     </div>
     <button type="submit" class="btn btn-primary">Update Quiz</button>
 </form>
