padding b for navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-">
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light py-4">
+        <nav class="navbar navbar-expand-lg navbar-light py-4 mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ url_for('main.home') }}">Quizzes</a>
                 <div class="d-flex justify-content-between w-100">
